# uq_calculator

./: pyproject.toml
src/ece_calculator/: __init__.py  ece.py
src/uq_calculator/: __init__.py  evaluate_all.py  get_mcd.py  plot_confidence_band.py
tests/: __init__.py  ece_test.py  mcd_test.py  test.py
