[tool.poetry]
name = "uq-calculator"
version = "0.1.2"
description = "Run Monte Carlo sampling and calculate metrics."
readme = "README.md"
authors = ["Kaylee Smith"]
license = "MIT"
keywords = ["ECE", "uncertainty", "calibration", "machine learning", "NLL", "MCD"]
packages = [{ include = "uq_calculator", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = ">=1.20"
scipy = ">=1.10"

[tool.poetry.extras]
tf = ["tensorflow>=2.20.0"]
sklearn = ["scikit-learn>=1.7.0"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
